<resources>
    <string name="nome_app">Avista</string>
    <string name="utilizador">E-Mail</string>
    <string name="password">Palavra-Passe</string>
    <string name="keep_me_logged_in">Mantém-me conectado.</string>
    <string name="Registe">Ainda não tem conta? Registe-se aqui.</string>
    <string name="Recupere">Recupere a sua palavra-passe.</string>
    <string name="confirmar_palavra_passe">Confirmar Palavra-Passe</string>
    <string name="registar">Registar</string>
    <string name="data_placeholder">Placeholder</string>
    <string name="confirmar_password_falha">Palavras-Passe não correspondem.</string>
    <string name="preenchimento_falha">Preencha todos os campos.</string>
    <string name="login_falha">Houve um erro no acesso, tente novamente.</string>
    <string name="verificar_password">Verifique o nome de utilizador ou a password.</string>
    <string name="licenciatura_em_engenharia_inform_tica">Licenciatura em Engenharia Informática</string>
    <string name="desenvolvimento_de_aplica_es_m_veis">Desenvolvimento de Aplicações Móveis</string>
    <string name="autores">Autores:</string>
    <string name="vasco_silv_rio_n_22350">Vasco Silvério Nº22350</string>
    <string name="r_ben_garcia_n_16995">Rúben Garcia Nº16995</string>
    <string name="utiliza_o_das_apis">Utilização das APIs:</string>
    <string name="api_sheety">API Sheety</string>
    <string name="openstreetmaps_api">OpenStreetMaps API</string>
    <string name="imgbb_api">ImgBB API</string>
    <string name="verifique_a_liga_o_internet">Verifique a ligação à Internet.</string>
    <string name="preciso_dar_permiss_o_de_acesso_localiza_o_para_obter_a_latitude_e_longitude">É preciso dar permissão de acesso à localização para obter a latitude e longitude.</string>
    <string name="preciso_dar_a_permiss_o_de_acesso_c_mera_para_poder_tirar_fotografias">É preciso dar a permissão de acesso à câmera para poder tirar fotografias.</string>
    <string name="n_o_foi_selecionada_nenhuma_fotografia">Não foi selecionada nenhuma fotografia.</string>
    <string name="n_o_foi_especificada_a_esp_cie">Não foi especificada a espécie.</string>
    <string name="n_o_foi_especificada_a_data">Não foi especificada a data.</string>
    <string name="data_inv_lida_o_formato_da_data_deve_ser_dd_mm_aaaa">Data inválida. O formato da data deve ser dd/MM/aaaa.</string>
    <string name="resource_stackoverflow">Recurso de como efetuar upload de imagens para a API do ImgBB. Postado no StackOverflow por Mateusz, a 9 de dezembro de 2019.</string>
    <string name="url_resource_stackoverflow">https://stackoverflow.com/questions/59252255/how-to-upload-photo-via-retrofit-from-android-device</string>
    <string name="remover_conta_de_utilizador">Remover conta de utilizador</string>
    <string name="utilizacao_de_recursos">Utilização de recursos:</string>
    <string name="especie">Espécie:</string>
    <string name="inserir_especie_filtrar">Insira a espécie para filtrar</string>
    <string name="ordenar_pelo_mais_antigo">Ordenar pelo mais antigo</string>
    <string name="ordenar_pelo_mais_recente">Ordenar pelo mais recente</string>
    <string name="aplicar_filtros">Aplicar Filtros</string>
    <string name="descricao">Descrição</string>
    <string name="fechar">Fechar</string>
    <string name="editar">Editar</string>
    <string name="remover">Remover</string>
    <string name="ola_utilizador">Olá utilizador</string>
    <string name="as_suas_observacoes">As suas observações</string>
    <string name="filtros">Filtros</string>
    <string name="editar_observacao">Editar observação</string>
    <string name="especie_editar">Espécie:</string>
    <string name="descricao_editar">Descrição:</string>
    <string name="data_editar">Data:</string>
    <string name="fotografia_editar">Fotografia:</string>
    <string name="mapa_editar">Mapa</string>
    <string name="guardar_alteracoes_editar">Guardar alterações</string>
    <string name="especie_add">Espécie:</string>
    <string name="descricao_add">Descrição:</string>
    <string name="data_add">Data:</string>
    <string name="fotografia_add">Fotografia:</string>
    <string name="mapa_add">Mapa</string>
    <string name="adicionar_add">Adicionar</string>
</resources>
