<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/especie" />

    <RadioGroup
        android:id="@+id/radioGroupEspecie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/txtEspecieFiltro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="16"
            android:inputType="text"
            android:textSize="14dp"
            android:hint="@string/inserir_especie_filtrar"
            android:text="" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroupData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioDataAsc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ordenar_pelo_mais_antigo" />

        <RadioButton
            android:id="@+id/radioDataDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ordenar_pelo_mais_recente" />

    </RadioGroup>

    <Button
        android:id="@+id/btnAplicar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aplicar_filtros"/>
</LinearLayout>