<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_margin="20dp"
        android:src="@drawable/bird_logo"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <EditText
            android:drawableStart="@drawable/baseline_person_24"
            android:id="@+id/edit_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/utilizador"/>

        <EditText
            android:drawableStart="@drawable/baseline_password_24"
            android:id="@+id/editar_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"/>

        <CheckBox
            android:id="@+id/checkbox_logged"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/keep_me_logged_in"/>

       <Button
           android:id="@+id/button_login"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="Entrar"/>

    </LinearLayout>

    <TextView
        android:id="@+id/texto_registar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/Registe" />

    <TextView
        android:id="@+id/texto_recuperar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/texto_registar"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/Recupere" />

</RelativeLayout>